# flogin

./: .gitignore  CNAME  README.rst  index.html  pyproject.toml
.github/: dependabot.yml
.scripts/: remove_nested_gitignores.py  remove_nonroot_gitignores.py  template.html  update_badges.py  update_dirs.py
3.11/: class_index.html  function_index.html  index.html  status.json  z_0f17f59ccc88ed56___init___py.html  z_0f17f59ccc88ed56_base_object_py.html  z_0f17f59ccc88ed56_client_py.html  z_0f17f59ccc88ed56_enums_py.html  z_0f17f59ccc88ed56_errors_py.html  z_0f17f59ccc88ed56_requests_py.html  z_0f17f59ccc88ed56_responses_py.html  z_0f17f59ccc88ed56_results_py.html  z_2bbd9d7dc03a819a___init___py.html  z_2bbd9d7dc03a819a_api_py.html  z_2bbd9d7dc03a819a_base_py.html  z_2bbd9d7dc03a819a_enums_py.html  z_2bbd9d7dc03a819a_fuzzy_search_py.html  z_2bbd9d7dc03a819a_plugin_metadata_py.html  z_2bbd9d7dc03a819a_settings_py.html  z_63b0eb4f0921195e___init___py.html  z_63b0eb4f0921195e_filler_py.html  z_63b0eb4f0921195e_plugin_tester_py.html  z_640e631a230defac_search_handlers_py.html  z_95590cb2354cd89b___init___py.html  z_95590cb2354cd89b___main___py.html  z_95590cb2354cd89b_caching_py.html  z_95590cb2354cd89b_conditions_py.html  z_95590cb2354cd89b_default_events_py.html  z_95590cb2354cd89b_errors_py.html  z_95590cb2354cd89b_pip_py.html  z_95590cb2354cd89b_plugin_py.html  z_95590cb2354cd89b_query_py.html  z_95590cb2354cd89b_search_group_py.html  z_95590cb2354cd89b_search_handler_py.html  z_95590cb2354cd89b_settings_py.html  z_95590cb2354cd89b_utils_py.html
3.12/: class_index.html  function_index.html  index.html  status.json  z_0f17f59ccc88ed56___init___py.html  z_0f17f59ccc88ed56_base_object_py.html  z_0f17f59ccc88ed56_client_py.html  z_0f17f59ccc88ed56_enums_py.html  z_0f17f59ccc88ed56_errors_py.html  z_0f17f59ccc88ed56_requests_py.html  z_0f17f59ccc88ed56_responses_py.html  z_0f17f59ccc88ed56_results_py.html  z_2bbd9d7dc03a819a___init___py.html  z_2bbd9d7dc03a819a_api_py.html  z_2bbd9d7dc03a819a_base_py.html  z_2bbd9d7dc03a819a_enums_py.html  z_2bbd9d7dc03a819a_fuzzy_search_py.html  z_2bbd9d7dc03a819a_plugin_metadata_py.html  z_2bbd9d7dc03a819a_settings_py.html  z_63b0eb4f0921195e___init___py.html  z_63b0eb4f0921195e_filler_py.html  z_63b0eb4f0921195e_plugin_tester_py.html  z_640e631a230defac_search_handlers_py.html  z_95590cb2354cd89b___init___py.html  z_95590cb2354cd89b___main___py.html  z_95590cb2354cd89b_caching_py.html  z_95590cb2354cd89b_conditions_py.html  z_95590cb2354cd89b_default_events_py.html  z_95590cb2354cd89b_errors_py.html  z_95590cb2354cd89b_pip_py.html  z_95590cb2354cd89b_plugin_py.html  z_95590cb2354cd89b_query_py.html  z_95590cb2354cd89b_search_group_py.html  z_95590cb2354cd89b_search_handler_py.html  z_95590cb2354cd89b_settings_py.html  z_95590cb2354cd89b_utils_py.html
3.13/: class_index.html  function_index.html  index.html  status.json  z_0f17f59ccc88ed56___init___py.html  z_0f17f59ccc88ed56_base_object_py.html  z_0f17f59ccc88ed56_client_py.html  z_0f17f59ccc88ed56_enums_py.html  z_0f17f59ccc88ed56_errors_py.html  z_0f17f59ccc88ed56_requests_py.html  z_0f17f59ccc88ed56_responses_py.html  z_0f17f59ccc88ed56_results_py.html  z_2bbd9d7dc03a819a___init___py.html  z_2bbd9d7dc03a819a_api_py.html  z_2bbd9d7dc03a819a_base_py.html  z_2bbd9d7dc03a819a_enums_py.html  z_2bbd9d7dc03a819a_fuzzy_search_py.html  z_2bbd9d7dc03a819a_plugin_metadata_py.html  z_2bbd9d7dc03a819a_settings_py.html  z_63b0eb4f0921195e___init___py.html  z_63b0eb4f0921195e_filler_py.html  z_63b0eb4f0921195e_plugin_tester_py.html  z_640e631a230defac_search_handlers_py.html  z_95590cb2354cd89b___init___py.html  z_95590cb2354cd89b___main___py.html  z_95590cb2354cd89b_caching_py.html  z_95590cb2354cd89b_conditions_py.html  z_95590cb2354cd89b_default_events_py.html  z_95590cb2354cd89b_errors_py.html  z_95590cb2354cd89b_pip_py.html  z_95590cb2354cd89b_plugin_py.html  z_95590cb2354cd89b_query_py.html  z_95590cb2354cd89b_search_group_py.html  z_95590cb2354cd89b_search_handler_py.html  z_95590cb2354cd89b_settings_py.html  z_95590cb2354cd89b_utils_py.html
coverage_report_3.11/: status.json  z_0f17f59ccc88ed56___init___py.html  z_0f17f59ccc88ed56_base_object_py.html  z_0f17f59ccc88ed56_client_py.html  z_0f17f59ccc88ed56_enums_py.html  z_0f17f59ccc88ed56_errors_py.html  z_0f17f59ccc88ed56_responses_py.html  z_0f17f59ccc88ed56_results_py.html  z_2bbd9d7dc03a819a_base_py.html  z_2bbd9d7dc03a819a_settings_py.html  z_63b0eb4f0921195e_filler_py.html  z_63b0eb4f0921195e_plugin_tester_py.html  z_95590cb2354cd89b___main___py.html  z_95590cb2354cd89b_conditions_py.html  z_95590cb2354cd89b_errors_py.html  z_95590cb2354cd89b_pip_py.html  z_95590cb2354cd89b_plugin_py.html  z_95590cb2354cd89b_query_py.html  z_95590cb2354cd89b_search_handler_py.html  z_95590cb2354cd89b_settings_py.html  z_95590cb2354cd89b_utils_py.html
coverage_report_3.12/: class_index.html  index.html  z_0f17f59ccc88ed56_base_object_py.html  z_2bbd9d7dc03a819a___init___py.html  z_2bbd9d7dc03a819a_fuzzy_search_py.html  z_2bbd9d7dc03a819a_plugin_metadata_py.html  z_63b0eb4f0921195e___init___py.html  z_95590cb2354cd89b___init___py.html  z_95590cb2354cd89b___main___py.html  z_95590cb2354cd89b_errors_py.html  z_95590cb2354cd89b_settings_py.html  z_95590cb2354cd89b_utils_py.html
coverage_report_3.13/: function_index.html  status.json  z_0f17f59ccc88ed56_client_py.html  z_0f17f59ccc88ed56_requests_py.html  z_0f17f59ccc88ed56_responses_py.html  z_0f17f59ccc88ed56_results_py.html  z_2bbd9d7dc03a819a_api_py.html  z_2bbd9d7dc03a819a_base_py.html  z_2bbd9d7dc03a819a_enums_py.html  z_63b0eb4f0921195e_plugin_tester_py.html  z_640e631a230defac_search_handlers_py.html  z_95590cb2354cd89b_caching_py.html  z_95590cb2354cd89b_conditions_py.html  z_95590cb2354cd89b_default_events_py.html  z_95590cb2354cd89b_pip_py.html  z_95590cb2354cd89b_plugin_py.html  z_95590cb2354cd89b_query_py.html
docs/: api.rst  complex_plugins.rst  conf.py  events.rst  faq.rst  index.rst  install_plugin.rst  intro.rst  log-override-files.rst  make.bat  quickstart.rst  search_handlers.rst  settings.rst  (+3 more)
(+72 files in other folders)
