[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flogin"
description = "A Python wrapper for Flow Launcher's v2 python api"
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.11"
authors = [{ name = "cibere" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]
dependencies = [
    "aioconsole==0.8.2"
]

[project.urls]
Documentation = "https://flogin.readthedocs.io/en/latest/"
"Issue tracker" = "https://github.com/cibere/flogin/issues"

[project.optional-dependencies]
docs = [
    "sphinx>=7.0.0,<9.0.0",
    "furo==2025.7.19", # theme // https://pradyunsg.me/furo/customisation/announcement/
    "sphinx-toolbox>=3.5,<5.0",  # https://sphinx-toolbox.readthedocs.io/en/latest/extensions/index.html
    "sphinxcontrib-trio==1.1.2",
    "sphinx-copybutton==0.5.2",
]
tests = [
    "pytest==8.4.1",
    "pytest-asyncio==1.2.0",
    "pytest-cov==6.2.1",
]
pip = [
    "requests==2.32.5"
]

[tool.setuptools]
packages = [
    "flogin",
    "flogin.flow",
    "flogin.jsonrpc",
    "flogin.testing",
    "flogin._types",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "module"
addopts = "--cov=flogin --cov-report term-missing --cov-report html"

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "# cov: skip"
]

[tool.ruff]
exclude = ["examples", "venv*"]

[tool.ruff.lint]
select = [
    "C4", # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "E", # https://docs.astral.sh/ruff/rules/#error-e_1
    "F", # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "G", # https://docs.astral.sh/ruff/rules/#flake8-logging-format-g
    "I", # https://docs.astral.sh/ruff/rules/#isort-i
    #"PTH", # https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "RUF", # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
    "SIM", # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "TC", # https://docs.astral.sh/ruff/rules/#flake8-type-checking-tc
    "UP", # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "W", # https://docs.astral.sh/ruff/rules/#warning-w
    "PERF", # https://docs.astral.sh/ruff/rules/#perflint-perf
    "ANN",  # https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
    "PGH", # https://docs.astral.sh/ruff/rules/#pygrep-hooks-pgh
    "RET", # https://docs.astral.sh/ruff/rules/#flake8-return-ret
    "PLE", # https://docs.astral.sh/ruff/rules/#error-e_1
]
ignore = [
    "F403", # https://docs.astral.sh/ruff/rules/undefined-local-with-import-star/#undefined-local-with-import-star-f403
    "SIM105", # https://docs.astral.sh/ruff/rules/suppressible-exception/
    "E501", # https://docs.astral.sh/ruff/rules/line-too-long/
    "ANN401", # https://docs.astral.sh/ruff/rules/any-type/
    "RET503", # https://docs.astral.sh/ruff/rules/implicit-return/
    "RET502", # https://docs.astral.sh/ruff/rules/implicit-return-value/
    "PGH003", # https://docs.astral.sh/ruff/rules/blanket-type-ignore
]

[tool.ruff.lint.per-file-ignores]
"flogin/_types/**.py" = ["TC001", "TC002", "TC003"]
"tests/**" = [
    "ANN201", # https://docs.astral.sh/ruff/rules/missing-return-type-undocumented-public-function
    "ANN001", # https://docs.astral.sh/ruff/rules/missing-type-function-argument
    "ANN202", # https://docs.astral.sh/ruff/rules/missing-return-type-private-function
    "ANN206", # https://docs.astral.sh/ruff/rules/missing-return-type-class-method
]
"docs/**" = [
    "ANN201", # https://docs.astral.sh/ruff/rules/missing-return-type-undocumented-public-function
    "ANN001", # https://docs.astral.sh/ruff/rules/missing-type-function-argument
    "ANN202", # https://docs.astral.sh/ruff/rules/missing-return-type-private-function
    "ANN206", # https://docs.astral.sh/ruff/rules/missing-return-type-class-method
    "RUF012", # https://docs.astral.sh/ruff/rules/mutable-class-default
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
include = [
    "tests",
    "flogin",
    "examples",
]
pythonPlatform = "Windows"
typeCheckingMode = "strict"
reportPrivateUsage = false
reportMissingTypeStubs = false